# gnome-builder-dprint-plugin

./: COPYING  install.sh  meson.build  meson_options.txt
data/: dprint.plugin  meson.build
dprint/: dprint.vala  meson.build
