option('builder_abi', type: 'string', value: '45', description: 'The ABI to use')
option('compress', type: 'feature', value: 'enabled', description: 'Whether to compress the plugins using eu-elfcompress')
option('flatpak', type: 'boolean', value: false, description: 'Whether this is a flatpak build or a bare-metal build')
option('plugin_dprint', type: 'feature', value: 'enabled')